--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-<div class="container"></div>
+<div class="container diff1"></div>
+
+
 </body>
 </html>
