--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-<div class="container difference-2"></div>
+<div class="container diff2"></div>
 
 
 </body>
